# gint

./: .gitignore  CLAUDE.md  GEMINI.md  LICENSE  ablation_results.csv  generate.sh  generate_amdgcn.sh  pyproject.toml  run_tests.py  setup.py
.github/workflows/: build.yml
benchmark/: bench.py  bench_compile.py  bench_compile_results.csv  bench_lowlevel.py  bench_roofline.py  isolate_first_call.py  ncu_aplusb.sh  ncu_bmm4x4.sh  ncu_inv4x4.sh  ncu_rmsnorm.sh  ncu_simpleops.sh  plot_roofline.py  profile_make_graphed.py
docs/: conductor.md  fish_render_investigation.md  install.md  kernel.md  platforms.md  superopt.md
examples/rl_rewards/: __main__.py  dispatch.py  rewards.py
examples/superopt/: __main__.py  candidates.py  executor.py  executor_torch.py  opcodes.py  search.py  targets.py
gint/: __init__.py
gint/conductor/: README.md  __init__.py  backend.py  compiler.py  debug.py  op_registry.py  partitioner.py  special_ops.py
include/: gint_device.cuh
patch/: amdgpu-jt-dispatch.patch
scripts/: collect_opcode_frequencies.py  plot_ablation.py  run_ablation.py
tests/: __init__.py  test_a_plus_b.py  test_a_plus_b_executor.py  test_analyzer.py  test_arith_basic.py  test_binary_arith_basic.py  test_bmm4x4.py  test_conductor_backend.py  test_conductor_bmm_inv.py  test_conductor_real_workloads.py  test_cuda_graph_capture.py  test_cuda_graphs_conductor.py  test_frontend.py  test_gen_ir_intrinsics.py  test_indirect.py  test_indirect_and_integer.py  test_interpret_trivial.py  test_inv4x4.py  test_rmsnorm.py  test_torch_compile_compat.py
tools/: driver.cu
(+47 files in other folders)
