[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gint"
dynamic = ["version"]
license = "LGPL-2.1-or-later"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "llvmlite>=0.43",
    "cuda-bindings>=12.6",
    "rich",
]

[project.optional-dependencies]
torch = ["torch>=2.0"]

[tool.hatch.version]
path = "gint/version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/gint",
]
artifacts = [
    "gint/host/cuda/gint.fatbin.xz",
]

[tool.hatch.build.targets.wheel]
include = [
    "/gint",
]
artifacts = [
    "gint/host/cuda/gint.fatbin.xz",
]

[project.scripts]
gint-gen-llir = "gint.scripts.gen_llir:main"
gint-driver = "gint.scripts.driver:main"
